# polishuk-elections-2026

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: README.md  deploy-pages.yml  recompute.yml  scrape.yml  test.yml  watchdog.yml  weekly-close.yml
docs/: 00-overview.md  01-product-spec.md  02-scoring-spec.md  03-architecture.md  04-data-model.md  05-scraper-spec.md  06-game-ops.md  07-roadmap.md  08-final-parties-2026.md  09-ui-changes.md
frontend/: .env.example  README.md  admin.html  archive.html  bets.html  coming-soon.html  dashboard.html  index.html  leaderboard.html  login.html  package-lock.json  package.json  polls.html  profile.html  rules.html  tsconfig.json  vite.config.ts
frontend/src/: style.css
frontend/src/i18n/: en.json  he.json
frontend/src/lib/: database.types.ts  i18n.ts  supabase.ts  ui.ts
frontend/src/pages/: admin.ts  archive.ts  bets.ts  coming-soon.ts  (+7 more)
handoffs/: 2026-07-11-bootstrap.md  2026-07-12-rules-page.md  2026-07-13-ui-batch.md  2026-07-14-freshness-watchdog.md  2026-07-15-security-review.md  2026-07-16-trends-dashboard.md  2026-07-18-coming-soon-gate.md
pipeline/: .dbhost  README.md  cli.py  db.py  gameweeks.py  pyproject.toml  registry.py  scoring.py  scraper.py  watchdog.py  weekly_close.py
pipeline/fixtures/: wikipedia_2026-07-11.json
pipeline/tests/: test_scoring.py  test_scraper.py  test_watchdog.py  test_weekly_close.py
supabase/: README.md  seed.sql
supabase/migrations/: 0001_init.sql  0002_grants.sql  0003_publication_date.sql  0004_bet_lines_lock.sql  0005_profile_privacy.sql  0006_email_signups.sql
